--- a/source/html/index.html
+++ b/source/html/index.html
@@ -31,6 +31,8 @@
     <link href='css/wi-list.css' rel='stylesheet'>
     <link href='css/wi-context-menu.css' rel='stylesheet'>
     <link href='css/wi-treeview.css' rel='stylesheet'>
+    <link href='css/wi-base-treeview.css' rel='stylesheet'>
+
     <link href='css/wi-status-bar.css' rel='stylesheet'>
     <link href='css/wi-slidingbar.css' rel='stylesheet'>
     <link href='css/wi-resizable-x.css' rel='stylesheet'>
