--- a/source/dialogs/confirm/confirm-modal.html
+++ b/source/dialogs/confirm/confirm-modal.html
@@ -1,4 +1,4 @@
-<div class='modal fade'>
+<div class='modal fade' data-backdrop="static" data-keyboard="false">
 	<div class='modal-dialog modal-sm'>
 		<div class="modal-content">
 			<div class="modal-header">
@@ -9,7 +9,7 @@
 				<span style="font-style: italic; color: #281D1B" ng-bind-html="wiModal.confirmMsg"></span>
 			</div>
 			<div class="modal-footer">
-				<button class='btn btn-primary' ng-click='wiModal.close(true)'
+				<button class='btn btn-default' ng-click='wiModal.close(true)'
 						style="color: #000">Ok</button>
 				<button class='btn btn-default' ng-click='wiModal.close(false)'>Cancel</button>
 			</div>
