--- a/source/dialogs/unit-setting/unit-setting-modal.html
+++ b/source/dialogs/unit-setting/unit-setting-modal.html
@@ -1,4 +1,4 @@
-<div class="modal fade">
+<div class="modal fade" data-backdrop="static" data-keyboard="false">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
