--- a/source/dialogs/image-properties/image-properties-modal.html
+++ b/source/dialogs/image-properties/image-properties-modal.html
@@ -92,6 +92,18 @@
                             <input type="text" class="form-control wi-form-control" id="name" ng-model="wiModal.name" ng-disabled="!wiModal.showName">
                         </div>
                     </div>
+                    <div class="form-group">
+                        <label for="start-depth" class="control-label col-sm-3 normal-text">Start (depth)</label>
+                        <div class="col-sm-8">
+                            <input type="number" min="0" step="0.0001" class="form-control wi-form-control" id="start-depth" ng-model="wiModal.topDepth">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="start-depth" class="control-label col-sm-3 normal-text">End (depth)</label>
+                        <div class="col-sm-8">
+                            <input type="number" min="0" step="0.0001" class="form-control wi-form-control" id="end-depth" ng-model="wiModal.bottomDepth">
+                        </div>
+                    </div>
                 </form>
                 <p class="dialog-error" ng-if="wiModal.error">Error: {{wiModal.error}}</p>
             </div>
