--- a/source/html/index.html
+++ b/source/html/index.html
@@ -40,6 +40,9 @@
     <link href='css/wi-multi-input.css' rel='stylesheet'>
     <link href='css/wi-custom-input.css' rel='stylesheet'>
 
+    <link rel="stylesheet" href="css/wi-comboview.css">
+    <link rel="stylesheet" href="css/wi-d3-comboview.css">
+
     <link href='css/wi-logplot.css' rel='stylesheet'>
     <link href='css/wi-crossplot.css' rel='stylesheet'>
     <link href='css/wi-histogram.css' rel='stylesheet'>
