--- a/source/dialogs/curve-bulk-update/curve-bulk-update-modal.html
+++ b/source/dialogs/curve-bulk-update/curve-bulk-update-modal.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked();" aria-hidden="true">&times;</button>
-                <h4 class="modal-title"><span class="images-properties-16x16"></span>&nbsp;Curve bolk update</h4>
+                <h4 class="modal-title"><span class="images-properties-16x16"></span>&nbsp;Curve bulk update</h4>
             </div>
             <div class="modal-body dialog-style">
                 <p></p>
