--- a/source/dialogs/track-bulk-update/track-bulk-update-modal.html
+++ b/source/dialogs/track-bulk-update/track-bulk-update-modal.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked();" aria-hidden="true">&times;</button>
-                <h4 class="modal-title"><span class="images-properties-16x16"></span>&nbsp;Track bolk update</h4>
+                <h4 class="modal-title"><span class="images-properties-16x16"></span>&nbsp;Track bulk update</h4>
             </div>
             <div class="modal-body dialog-style">
                 <p></p>
@@ -36,7 +36,7 @@
                                     {{track.type}}
                                 </td>
                                 <td width="20%">
-                                    <input type="text" ng-model="track.name"
+                                    <input type="text" ng-model="track.title"
                                             class="form-control wi-form-control">
                                 </td>
                                 <td width="10%">
@@ -57,9 +57,9 @@
                                 </td>
                                 <td width="20%">
                                     <input type="number" step="any"
-                                            ng-if="'track.type' == log-track"
                                             ng-model="track.zoomFactor"
-                                            class="form-control wi-form-control">
+                                            class="form-control wi-form-control"
+                                            ng-disabled="track.type != 'log-track'">
                                 </td>
                             </tr>
                         </tbody>
