--- a/source/dialogs/track-bulk-update/track-bulk-update-modal.html
+++ b/source/dialogs/track-bulk-update/track-bulk-update-modal.html
@@ -12,16 +12,20 @@
                         <thead>
                             <tr>
                                 <th rowspan="2" width="5%"></th>
-                                <th rowspan="2" width="15%">Type</th>
-                                <th colspan="3" width="40%">Header</th>
-                                <th colspan="2" width="40%">Geometry</th>
+                                <th rowspan="2" width="10%">Type</th>
+                                <th colspan="1" width="15%">Header</th>
+                                <th colspan="4" width="40%">Grid</th>
+                                <th colspan="2" width="20%">Geometry</th>
+                                <th rowspan="2" width="10%">Color Track</th>
                             </tr>
                             <tr>
-                                <th width="20%">Title</th>
-                                <th width="10%">Show title</th>
-                                <th width="10%">Justification</th>
-                                <th width="20%">Width (inchs)</th>
-                                <th width="20%">Zoom factor</th>
+                                <th width="15%">Title</th>
+                                <th width="10%">Show value</th>
+                                <th width="10%">Show depth</th>
+                                <th width="10%">Major</th>
+                                <th width="10%">Minor</th>
+                                <th width="10%">Width (inchs)</th>
+                                <th width="10%">Zoom factor</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -32,35 +36,56 @@
                                     <input type="checkbox"
                                             ng-model="track.check">
                                 </td>
-                                <td width="15%">
+                                <td width="10%">
                                     {{track.type}}
                                 </td>
-                                <td width="20%">
+                                <td width="15%">
                                     <input type="text" ng-model="track.title"
                                             class="form-control wi-form-control">
                                 </td>
                                 <td width="10%">
-                                    <input type="checkbox" ng-model="track.showTitle">
+                                    <input type="checkbox" 
+                                            ng-model="track.showXGrids">
                                 </td>
                                 <td width="10%">
-                                    <select class="form-control wi-form-control"
-                                            ng-model="track.justification">
-                                        <option value="left">Left</option>
-                                        <option value="center">Center</option>
-                                        <option value="right">Right</option>
-                                     l </select>
+                                    <input type="checkbox" 
+                                            ng-model="track.showYGrids">
                                 </td>
-                                <td width="20%">
-                                   <input type="number" step="any" 
-                                            ng-model="track.width"
+                                <td width="10%">
+                                    <input type="number" step="any" 
+                                            ng-model="track.xMajorTicks"
                                             class="form-control wi-form-control">
                                 </td>
-                                <td width="20%">
+                                <td width="10%">
+                                    <input type="number" step="any" 
+                                            ng-model="track.xMinorTicks"
+                                            class="form-control wi-form-control">
+                                </td>
+                                <td width="10%">
+                                    <input type="number" step="any" 
+                                            ng-model="track.width"
+                                            class="form-control wi-form-control"
+                                            ng-change="wiModal.getSum()">
+                                </td>
+                                <td width="10%">
                                     <input type="number" step="any"
                                             ng-model="track.zoomFactor"
                                             class="form-control wi-form-control"
                                             ng-disabled="track.type != 'log-track'">
                                 </td>
+                                <td width="10%">
+                                    <div class="float-left">
+                                        <button ng-click="wiModal.colorTrack(track);"
+                                                ng-style="{'background-color':track.bgColor}"
+                                                class="form-control wi-form-control width-80px thick-border">
+                                        </button>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr style="background: #EBEDEF;">
+                                <td colspan="7" style="text-align: right;">Sum of width</td>
+                                <td style="text-align: center;">{{wiModal.sumWidth}}</td>
+                                <td colspan="2"></td>
                             </tr>
                         </tbody>
                     </table>
