--- a/source/dialogs/image-track-properties/image-track-properties-modal.html
+++ b/source/dialogs/image-track-properties/image-track-properties-modal.html
@@ -6,7 +6,7 @@
                 <h4 class="modal-title">Image Track Properties - {{wiModal.title}}</h4>
             </div>
             <div class="modal-body">
-                <form action="" class="form-horizontal dialog-style">
+                <form name="myForm" action="" class="form-horizontal dialog-style" novalidate>
                     <h5 class="normal-text">General</h5>
                     <div class="form-group">
                         <div class="col-sm-5">
@@ -42,14 +42,13 @@
                     <div class="form-group">
                         <label class="control-label col-sm-5 padding-left-3em" for="width">Width (inchs)</label>
                         <div class="col-sm-7">
-                            <input type="number" min="1" step="1" class="form-control wi-form-control" id="width" ng-model="wiModal.width">
+                            <input type="number" min="1" step="0.0001" class="form-control wi-form-control" id="width" ng-model="wiModal.width">
                         </div>
                     </div>
                     <div ng-if="wiModal.status">
                         <h5 class="normal-text">Image Manager</h5>
                         <div class="row" style="height: 40%">
                             <div class='col-sm-9 height-100-percent' style='overflow-x: auto; overflow-y: auto;'>
-                                <i ng-if="wiModal.isPropsChanged" style="color: red">Properties changed. Re-open '{{wiModal.tabName}}' tab to take effects</i>
                                 <table class="table table-bordered">
                                     <thead>
                                         <tr>
