fix enter on dialog

--- a/source/dialogs/color-picker/color-picker-modal.html
+++ b/source/dialogs/color-picker/color-picker-modal.html
@@ -72,7 +72,7 @@
                   </div>
                 </div>
               </div>
-              <button class="btn btn-default" style="display: none;" ng-click='wiModal.updateColor();'>Click</button>
+              <button type="button" class="btn btn-default" style="display: none;" ng-click='wiModal.updateColor();'>Click</button>
             </form>
           </div>
           <!-- End of RGB format -->
