--- a/source/dialogs/curve-attribute/curve-attribute-modal.html
+++ b/source/dialogs/curve-attribute/curve-attribute-modal.html
@@ -52,7 +52,7 @@
                                             <label class="control-label col-sm-2">Line Color</label>
                                             <div class="col-sm-9">
                                                 <div class="valign-middle pull-left" style="height: 23px; width: 90%;" ng-style="{'background-color':wiModal.lineOptions.lineStyle.lineColor}"></div>
-                                                <button ng-click="wiModal.lineColor();" class="wi-form-control">...</button>
+                                                <button type="button" ng-click="wiModal.lineColor();" class="wi-form-control">...</button>
                                             </div>
                                         </div>
                                     </div>
@@ -104,7 +104,7 @@
                                             <label class="control-label col-sm-2">Fill Color</label>
                                             <div class="col-sm-9">
                                                 <div class="valign-middle pull-left" style="height: 23px; width: 90%; border: 1px solid #000;" ng-style="{'background-color':wiModal.symbolOptions.symbolStyle.symbolFillStyle}"></div>
-                                                <button ng-click="wiModal.fillColor();" class="wi-form-control">...</button>
+                                                <button type="button" ng-click="wiModal.fillColor();" class="wi-form-control">...</button>
                                             </div>
                                         </div>
                                     </div>
@@ -132,14 +132,14 @@
                                             <label class="control-label col-sm-3">Foreground</label>
                                             <div class="col-sm-9">
                                                 <div class="valign-middle pull-left" style="height: 23px; width: 90%;" ng-style="{'background-color':wiModal.symbolOptions.patternFill.foreground}"></div>
-                                                <button ng-click="wiModal.foregroundColor();" class="wi-form-control">...</button>
+                                                <button type="button" ng-click="wiModal.foregroundColor();" class="wi-form-control">...</button>
                                             </div>
                                         </div>
                                         <div class="form-group">
                                             <label class="control-label col-sm-3">Background</label>
                                             <div class="col-sm-9">
                                                 <div class="valign-middle pull-left" style="height: 23px; width: 90%;" ng-style="{'background-color':wiModal.symbolOptions.patternFill.foreground}"></div>
-                                                <button ng-click="wiModal.backgroundColor();" class="wi-form-control">...</button>
+                                                <button type="button" ng-click="wiModal.backgroundColor();" class="wi-form-control">...</button>
                                             </div>
                                         </div>
                                     </div>
