--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -168,7 +168,7 @@
                                             </label>
                                             <div class="col-sm-8">
                                                 <div class="float-left">
-                                                    <button ng-click="wiModal.colorTrack();"
+                                                    <button type="button" ng-click="wiModal.colorTrack();"
                                                             ng-style="{'background-color':wiModal.props.general.color}"
                                                             class="form-control wi-form-control width-80px thick-border">
                                                     </button>
