--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -214,54 +214,54 @@
                                                 <td>
                                                     <input type="text" ng-model="curve.alias"
                                                            class="form-control wi-form-control"
-                                                           ng-change="wiModal.onChangeCurve();"
+                                                           ng-change="wiModal.onChangeCurve($index);"
                                                            ng-disabled="!wiModal.lineCurve[curve._index].id">
                                                 </td>
                                                 <td>
                                                     <input type="number" ng-model="curve.minValue" step="any"
                                                            class="form-control wi-form-control"
-                                                           ng-change="wiModal.onChangeCurve();"
+                                                           ng-change="wiModal.onChangeCurve($index);"
                                                            ng-disabled="!wiModal.lineCurve[curve._index].id">
                                                 </td>
                                                 <td>
                                                     <input type="number" ng-model="curve.maxValue" step="any"
                                                            class="form-control wi-form-control"
-                                                           ng-change="wiModal.onChangeCurve();"
+                                                           ng-change="wiModal.onChangeCurve($index);"
                                                            ng-disabled="!wiModal.lineCurve[curve._index].id">
                                                 </td>
                                                 <td>
                                                     <select ng-model="curve.displayType" name="log"
                                                             value="" class="form-control wi-form-control"
                                                             ng-options="item for item in wiModal.logLinear track by item"
-                                                            ng-change="wiModal.onChangeCurve();"
+                                                            ng-change="wiModal.onChangeCurve($index);"
                                                             ng-disabled="!wiModal.lineCurve[curve._index].id"></select>
                                                 </td>
                                                 <td>
                                                     <select ng-model="curve.displayMode" name="displayMode"
                                                             value="" class="form-control wi-form-control"
                                                             ng-options="item for item in wiModal.displayMode track by item"
-                                                            ng-change="wiModal.onChangeCurve();"
+                                                            ng-change="wiModal.onChangeCurve($index);"
                                                             ng-disabled="!wiModal.lineCurve[curve._index].id"></select>
                                                 </td>
                                                 <td>
                                                     <input ng-model="curve.lineOptions"
                                                             type="button" value="Edit..." id="editLine"
                                                             class="form-control wi-form-control"
-                                                            ng-click="wiModal.lineStyleButtonClicked($index, $event); wiModal.onChangeCurve();"
+                                                            ng-click="wiModal.lineStyleButtonClicked($index, $event); wiModal.onChangeCurve($index);"
                                                             ng-disabled="!wiModal.lineCurve[curve._index].id || (curve.displayMode == 'Symbol' || curve.displayMode == 'None')">
                                                 </td>
                                                 <td>
                                                     <input ng-model="curve.symbolOptions"
                                                             type="button" value="Edit..." id="editSymbol"
                                                             class="form-control wi-form-control"
-                                                            ng-click="wiModal.symbolStyleButtonClicked($index, $event); wiModal.onChangeCurve();"
+                                                            ng-click="wiModal.symbolStyleButtonClicked($index, $event); wiModal.onChangeCurve($index);"
                                                             ng-disabled="!wiModal.lineCurve[curve._index].id || (curve.displayMode == 'Line' || curve.displayMode == 'None')">
                                                 </td>
                                                 <td>
                                                     <select ng-model="curve.displayAs" name="displayAs"
                                                             value="" class="form-control wi-form-control"
                                                             ng-options="item for item in wiModal.displayAs track by item"
-                                                            ng-change="wiModal.onChangeCurve();"
+                                                            ng-change="wiModal.onChangeCurve($index);"
                                                             ng-disabled="!wiModal.lineCurve[curve._index].id"></select>
                                                 </td>
                                             </tr>
